--- a/smartcontactmanager/src/main/resources/templates/base.html
+++ b/smartcontactmanager/src/main/resources/templates/base.html
@@ -10,6 +10,8 @@
 	rel="stylesheet"
 	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 	crossorigin="anonymous">
+	
+<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 	<!--  navbar -->
@@ -64,5 +66,7 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
 		integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
 		crossorigin="anonymous"></script>
+		
+	<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
