added login signup navbar with colors and bootstrap

--- a/smartcontactmanager/src/main/resources/templates/home.html
+++ b/smartcontactmanager/src/main/resources/templates/home.html
@@ -5,8 +5,12 @@
 <title>Smart Contact Manager</title>
 </head>
 <body>
-	<section>
-		<h1>Homepage</h1>
+	<section class="banner d-flex justify-content-center align-items-center">
+		<div class="text-center">
+			<h1 class="font-weight-bold">Smart Contact Manager</h1>
+			<p>Start collecting your contacts in a very smart way. We provide a very efficient and smarter way of storing contacts.</p>
+			<button class="btn bg-primary  btn-lg text-white">Get Started</button>
+		</div>
 	</section>
 </body>
 </html>
