--- a/smartcontactmanager/src/main/resources/templates/signup.html
+++ b/smartcontactmanager/src/main/resources/templates/signup.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="base::layout(~{::section})">
 <head>
 <meta charset="UTF-8">
 <title>Smart Contact Manager</title>
 </head>
 <body>
 	<section>
-		<h1>this is signup page</h1>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 offset-md-2">
+					<div class="my-card mt-3 rounded-5">
+					
+						<div class="container text-center">
+							<img th:src="@{/img/edit.png}" style="width: 75px;" alt="register_img" />
+							<h1 class="text-center">Register Here !!</h1>
+						</div>
+
+						<form action="" th:action="@{/do_register}" method="post">
+						
+							<!-- name field -->
+							<div class="mb-3">
+								<label for="name_field" class="mb-2"> Your
+									Name </label> <input type="text" class="form-control" id="name_field"
+									aria-describedby="emailHelp" placeholder="Enter Here" required />
+							</div>
+
+							<!-- email field -->
+							<div class="mb-3">
+								<label for="email_field" class="mb-2"> Email
+									address </label> <input type="email" class="form-control"
+									id="email_field" aria-describedby="emailHelp"
+									placeholder="Enter Here" required />
+							</div>
+							
+							<!-- password field -->
+							<div class="mb-3">
+								<label for="password_field" class="mb-2">
+									Password </label> <input type="password" class="form-control"
+									id="name_field" aria-describedby="emailHelp"
+									placeholder="Enter Here" required />
+							</div>
+							
+							<!-- about field -->
+							<div class="mb-3">
+								<textarea placeholder="Enter something about yourself" rows="6" class="form-control"></textarea>
+							</div>
+							
+							<div class="container text-center" >
+								<button class="btn bg-primary text-white" type="submit">Submit</button>
+								<button class="btn btn-warning text-white" type="reset">Reset</button>
+							</div>
+							
+							
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
