created user repository and saved entities

--- a/smartcontactmanager/src/main/resources/templates/signup.html
+++ b/smartcontactmanager/src/main/resources/templates/signup.html
@@ -11,48 +11,89 @@
 			<div class="row">
 				<div class="col-md-8 offset-md-2">
 					<div class="my-card mt-3 rounded-5">
-					
+
 						<div class="container text-center">
-							<img th:src="@{/img/edit.png}" style="width: 75px;" alt="register_img" />
+							<img th:src="@{/img/edit.png}" style="width: 75px;"
+								alt="register_img" />
 							<h1 class="text-center">Register Here !!</h1>
 						</div>
 
-						<form action="" th:action="@{/do_register}" method="post">
-						
+						<form action="" th:action="@{/register}" method="post" th:object=${user}>
+
 							<!-- name field -->
 							<div class="mb-3">
-								<label for="name_field" class="mb-2"> Your
-									Name </label> <input type="text" class="form-control" id="name_field"
-									aria-describedby="emailHelp" placeholder="Enter Here" required />
+								<label for="name_field" class="mb-2"> Your Name</label> 
+								
+								<input
+									name="name"
+									type="text" 
+									class="form-control" 
+									id="name_field"
+									aria-describedby="emailHelp" 
+									placeholder="Enter Here"
+									th:value="${user.name}"
+									required 
+								/>
 							</div>
 
 							<!-- email field -->
 							<div class="mb-3">
-								<label for="email_field" class="mb-2"> Email
-									address </label> <input type="email" class="form-control"
-									id="email_field" aria-describedby="emailHelp"
-									placeholder="Enter Here" required />
+								<label for="email_field" class="mb-2"> Email address </label> 
+								
+								<input
+									name="email"
+									type="email" 
+									class="form-control" 
+									id="email_field"
+									aria-describedby="emailHelp" 
+									placeholder="Enter Here" 
+									th:value="${user.username}" 
+									required 
+								/>
 							</div>
-							
+
 							<!-- password field -->
 							<div class="mb-3">
-								<label for="password_field" class="mb-2">
-									Password </label> <input type="password" class="form-control"
-									id="name_field" aria-describedby="emailHelp"
-									placeholder="Enter Here" required />
+								<label for="password_field" class="mb-2"> Password </label> 
+								<input
+									name="password" 
+									type="password" 
+									class="form-control" 
+									id="name_field"
+									aria-describedby="passwordHelp" 
+									placeholder="Enter Here" 
+									required />
 							</div>
-							
+
 							<!-- about field -->
 							<div class="mb-3">
-								<textarea placeholder="Enter something about yourself" rows="6" class="form-control"></textarea>
+								<textarea 
+									name="about" 
+									placeholder="Enter something about yourself" 
+									rows="6"
+									class="form-control" 
+									th:value="${user.about}">
+									</textarea>
 							</div>
-							
-							<div class="container text-center" >
+
+							<!-- terms & condition -->
+
+							<div class="form-group form-check">
+								<input 
+									class="form-check-input" 
+									id="agreement" 
+									type="checkbox"
+									name="agreement" />
+									
+								<label for="agreement">Accept terms and conditions</label>
+							</div>
+
+							<div class="container text-center">
 								<button class="btn bg-primary text-white" type="submit">Submit</button>
 								<button class="btn btn-warning text-white" type="reset">Reset</button>
 							</div>
-							
-							
+
+
 						</form>
 					</div>
 				</div>
