--- a/smartcontactmanager/src/main/resources/static/css/style.css
+++ b/smartcontactmanager/src/main/resources/static/css/style.css
@@ -3,3 +3,12 @@
 body{
 	background: #e2e2e2 !important;
 }
+
+.bg-primary{
+	background: #009688 !important;
+}
+
+.my-card{
+	padding: 1.25rem;
+	background: #ffffff;
+}
