--- a/smartcontactmanager/src/main/resources/templates/base.html
+++ b/smartcontactmanager/src/main/resources/templates/base.html
@@ -17,7 +17,7 @@
 	<!--  navbar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Smart Contact Manager</a>
+			<a class="navbar-brand" href="/">Smart Contact Manager</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
