--- a/smartcontactmanager/src/main/resources/templates/signup.html
+++ b/smartcontactmanager/src/main/resources/templates/signup.html
@@ -11,14 +11,23 @@
 			<div class="row">
 				<div class="col-md-8 offset-md-2">
 					<div class="my-card mt-3 rounded-5">
-
+							<div 
+								th:if="${session.message}"
+								th:classappend="${session.message.type}"
+								class="alert" 
+								role="alert"
+							>
+								<p th:text=${session.message.content} class="text-center"></p>
+								
+							</div>
+						
 						<div class="container text-center">
 							<img th:src="@{/img/edit.png}" style="width: 75px;"
 								alt="register_img" />
 							<h1 class="text-center">Register Here !!</h1>
 						</div>
 
-						<form action="" th:action="@{/register}" method="post" th:object=${user}>
+						<form novalidate action="" th:action="@{/register}" method="post" th:object=${user}>
 
 							<!-- name field -->
 							<div class="mb-3">
@@ -28,28 +37,45 @@
 									name="name"
 									type="text" 
 									class="form-control" 
+									th:classappend="${#fields.hasErrors('name') ? 'is-invalid' : ''}"
 									id="name_field"
-									aria-describedby="emailHelp" 
+									aria-describedby="nameHelp" 
 									placeholder="Enter Here"
 									th:value="${user.name}"
 									required 
 								/>
+								<div 
+									class="invalid-feedback" 
+									th:each="e : ${#fields.errors('name')}"
+									th:text="${e}"
+								>
+							        
+							    </div>
 							</div>
 
 							<!-- email field -->
 							<div class="mb-3">
-								<label for="email_field" class="mb-2"> Email address </label> 
+								<label for="username_field" class="mb-2"> Email address </label> 
 								
 								<input
-									name="email"
+									name="username"
 									type="email" 
 									class="form-control" 
-									id="email_field"
-									aria-describedby="emailHelp" 
+									th:classappend="${#fields.hasErrors('username') ? 'is-invalid' : ''}"
+									id="username_field"
+									aria-describedby="usernameHelp" 
 									placeholder="Enter Here" 
 									th:value="${user.username}" 
 									required 
 								/>
+								
+								<div 
+									class="invalid-feedback" 
+									th:each="e : ${#fields.errors('username')}"
+									th:text="${e}"
+								>
+							        
+							    </div>
 							</div>
 
 							<!-- password field -->
@@ -59,20 +85,30 @@
 									name="password" 
 									type="password" 
 									class="form-control" 
-									id="name_field"
+									th:classappend="${#fields.hasErrors('password') ? 'is-invalid' : ''}"
+									id="password_field"
 									aria-describedby="passwordHelp" 
 									placeholder="Enter Here" 
-									required />
+									required 
+								/>
+								<div 
+									class="invalid-feedback" 
+									th:each="e : ${#fields.errors('password')}"
+									th:text="${e}"
+								>
+								</div>
 							</div>
 
 							<!-- about field -->
 							<div class="mb-3">
+							<label for="about_field" class="mb-2"> About </label> 
 								<textarea 
+									id="about_field"
 									name="about" 
 									placeholder="Enter something about yourself" 
 									rows="6"
 									class="form-control" 
-									th:value="${user.about}">
+									th:text="${user.about}">
 									</textarea>
 							</div>
 
